test/errors/function/args_incorrect_type.np
def fn(x: int) -> int:
    return x


fn("hello")
